# TPP

./: .gitignore
T++Portable/: main.cpp
T++Portable/Linux_Build/: CMakeLists.txt
T++Portable/T++/: Framework.cpp  Framework.h
T++Portable/T++/framework/: BotMethods.h  MessageMethods.h
T++Portable/T++/framework/Bot/: ResponseHandler.cpp
T++Portable/T++/framework/Bot/Methods/: CopyMessage.cpp  ReplyMessage.cpp  SendFile.cpp  SendMessage.cpp
T++Portable/T++/framework/EventHandler/: Events.cpp
T++Portable/T++/framework/HttpClient/GetRequests/: Get.cpp  Get.h
T++Portable/T++/framework/QueryGen/: QueryGen.cpp  QueryGen.h
T++Portable/Windows_Build/: CMakeLists.txt  Framework_Export.h
